--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
   "homepage": "",
   "dependencies": {
     "angular": "^1.7.8",
-    "semantic": "^2.4.1"
+    "semantic": "^2.4.1",
+    "jquery": "^3.4.1"
   }
 }
